# Capstone

./: .gitignore  README.md  main.py  pyproject.toml  run_analysis.py  text.py
drone_mocap/: .gitignore  README.MD  gui.py  pyproject.toml  test_read.py
drone_mocap/drocap_desktop/: _pyi_rthook_drocap.py  drocap_ui.spec  main.py  pyproject.toml
drone_mocap/drocap_desktop/app/: main_window.py  theme.py
drone_mocap/drocap_desktop/app/panels/: chart_panel.py  control_panel.py  metrics_panel.py  video_panel.py
drone_mocap/drocap_desktop/app/utils/: biomechanics.py  bundle.py  report_gen.py
drone_mocap/drocap_desktop/app/workers/: analysis_worker.py
drone_mocap/drocap_desktop/assets/: Logo.icns
drone_mocap/src/drone_mocap/: cli.py
drone_mocap/src/drone_mocap/angles/: biomechanics.md  saggital2D.py
drone_mocap/src/drone_mocap/evaluation/: compare_mocap.py
drone_mocap/src/drone_mocap/filters/: smoothing.py
drone_mocap/src/drone_mocap/io/: mocap_txt.py  video.py
drone_mocap/src/drone_mocap/pipeline/: run.py
drone_mocap/src/drone_mocap/pose/: mediapose.py
drone_mocap/src/drone_mocap/utils/: scaling.py
pose_analysis/: INFO.md  config.py  main.py  requirements.txt
pose_analysis/core/: biomechanics.py  pose_detector.py  video_utils.py
pose_analysis/processing/: analyzer.py  stabilizer.py
pose_analysis/ui/: main_window.py  plot_widgets.py
src/motion_capture/: data_processing.py  kinematics_calculator.py  markerless_model.py  trc_loader.py
src/utils/: data_loader.py
src/visualization/: plot_3d_motion.py
tests/: test_motion_capture.py
