[project]
name = "drone-mocap"
version = "1.1.0"
description = "Sagittal markerless mocap baseline"
requires-python = ">=3.10"
dependencies = [
    "mediapipe",
    "opencv-python",
    "numpy",
    "pandas",
    "scipy",
    "pydantic",
    "typer",
    "rich"
    ]

[project.scripts]
drone-mocap = "drone_mocap.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
