[tool.poetry]
name = "drone-mocap"
version = "1.2.0"
description = "Sagittal markerless motion capture — 2D kinematic extraction from video"
authors = ["DroCap Capstone Team"]
readme = "README.md"
packages = [{include = "drone_mocap", from = "src"}]

[tool.poetry.dependencies]
python       = "~3.11"
mediapipe    = "0.10.14"
jax          = "0.4.20"
jaxlib       = "0.4.20"
opencv-python = "*"
numpy        = "^1.26.0"
pandas       = "*"
scipy        = "*"
pyarrow      = "*"
matplotlib   = "*"
typer        = {extras = ["all"], version = "*"}
rich         = "*"

[tool.poetry.scripts]
drone-mocap = "drone_mocap.cli:app"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
